--- a/templates/index.html
+++ b/templates/index.html
@@ -23,39 +23,34 @@
 		.btn-part{width:325px;}
 		textarea,
 		select,
-		.form-control,
-		.custom-select,
-		button.btn,
-		.btn-primary,
-		input[type="text"],
-		input[type="url"],
-		.uneditable-input{
-			border: 1px solid #363e75;
-			outline: 0 !important;
-			border-radius:0px;
-			box-shadow: none;
-		   -webkit-box-shadow: none;
-		   -moz-box-shadow: none;
-		   -moz-transition: none;
-		   -webkit-transition: none;
-		}
-		textarea:focus,
-		select:focus,
-		.form-control:focus,
-		.btn:focus,
-		.btn-primary:focus,
-		.custom-select:focus,
-		input[type="text"]:focus,
-		.uneditable-input:focus{
-			border: 1px solid #007bff;
-			outline: 0 !important;
-			border-radius:0px;
-			box-shadow: none;
-		   -webkit-box-shadow: none;
-		   -moz-box-shadow: none;
-		   -moz-transition: none;
-		   -webkit-transition: none;
-		}
+        .form-control,
+.custom-select,
+button.btn,
+.btn-primary,
+input[type="text"],
+input[type="url"],
+.uneditable-input {
+    border: 1px solid #363e75;
+    outline: 0 !important;
+    border-radius: 0;
+    box-shadow: none;
+    transition: none;
+}
+
+textarea:focus,
+select:focus,
+.form-control:focus,
+.btn:focus,
+.btn-primary:focus,
+.custom-select:focus,
+input[type="text"]:focus,
+.uneditable-input:focus {
+    border: 1px solid #007bff;
+    outline: 0 !important;
+    border-radius: 0;
+    box-shadow: none;
+    transition: none;
+}
 		#loading {
 			position: fixed;
 			left: 0px;
